# RubikCubeSolver

./: CMakeLists.txt  main.cpp
Model/: GenericRubikCube.cpp  GenericRubikCube.h  RubikCube1dArray.cpp  RubikCube3dArray.cpp  RubikCubeBitBoard.cpp
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  Math.cpp  Math.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h
Solvers/: BFSSolver.h  DFSSolver.h  IDASTARSolver.h  IDDFSSolver.h
